[MSHARED-1200] Switch to the Maven 4 API (#46)